# webserv

./: .gitignore  CMakeLists.txt  Makefile  Request.cpp  Request.hpp  a.out  google_connection.cpp  govno.cpp  listener.cpp  main.c  main.cpp  main_request.cpp  server.cpp  setup.sh  stol_server.cpp  test_resp_prepare.cpp  tester.py  webserv.conf  webserv.conf.template
conf_parse/: ConfParser.cpp  ConfParser.hpp  Location.cpp  Location.hpp  VirtServer.cpp  VirtServer.hpp
conf_parse/tests/: test_ConfParser.cpp
errors/: 400.html  403.html  404.html
html_files/: 50x.html  index.html
includes/: includes.hpp  server.hpp
libft/: Makefile
libft/includes/: libft.h
request_parse/: Request.cpp  Request.hpp  main_request.cpp
server_engine/: Bytes.cpp  Bytes.hpp  CGI.cpp  CGI.hpp  Chunk.cpp  Chunk.hpp  Client.cpp  Client.hpp  ErrorPages.cpp  ErrorPages.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  a.out  cgi_data.hpp  response.cpp  stol_server.cpp  time.cpp  utils.cpp
site/: index.html
site/cgi-bin/: hello.cgi  hello.py  php-info.php  test.html
site/css/: evo-calendar.orange-coral.min.css
site/js/: evo-calendar.min.js
site/pages/: booking.html  mycalendar.html  myevents.html
src/: ConfParser.cpp  ConfParser.hpp  VirtServer.cpp  VirtServer.hpp
src/tests/: test_ConfParser.cpp
tests/: index_template.cpp  test.cpp  test_ConfParser.cpp  test_gnl.cpp  test_resp_prepare.cpp
utils/: ft_atoi.cpp  ft_bzero.cpp  ft_itoa.cpp  ft_memcmp.cpp  ft_memcpy.cpp  ft_strdup.cpp  ft_strjoin.cpp  ft_strlen.cpp  ft_strnstr.cpp  time.cpp  utils.cpp
utils/gnl/: get_next_line.cpp  get_next_line.hpp  (+1 more)
(+18 files in other folders)
